Added fields for world gen options

--- a/final.html
+++ b/final.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
-  <body>
-    <script src="builtgame.js"></script>
-  </body>
+	<head>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"> </script>
+	</head>	
+	<body>
+		Seed: <input type="text" id="seed" value="foo"></input>
+		Floor Height: <input type="text" id="floor" value="0"></input>
+		Ceiling Height: <input type="text" id="ceiling" value="5"></input>
+		Scale Factor: <input type="text" id="scale" value="20"></input>
+		<input type="button" id="gen" value="Generate!"></input>
+		<script src="builtgame.js"></script>
+	</body>
 </html>
